# slide-forge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
frontend/: app.js  index.html  style.css
slideforge/: models.py  prompts.py  renderer.py  server.py  storage.py  template_loader.py
slideforge/templates/default/: config.json  slides.pptx
slideforge/tools/: generate_template.py
tests/: conftest.py  test_models.py  test_prompts.py  test_renderer.py  test_server.py  test_storage.py  test_template.py
